--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p class="modal-text">Save a copy to your Past Interviews?</p>
         <div class="modal-actions">
             <button id="savePastConfirm" class="save-btn">Save</button>
-            <button id="savePastCancel" class="cancel-btn">No</button>
+            <button id="savePastCancel" class="cancel-btn">Don't save</button>
         </div>
     </div>
 </div>
