transparency mode test

--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
         </label>
     </div>
 
+    <div class="settings-row">
+        <label class="settings-label">
+            <input type="checkbox" id="transparentModeToggle">
+            Transparent mode
+        </label>
+    </div>
+
     <button id="resetDemoBtn" class="settings-pill">Reset Demo</button>
 </div>
 
